Added testlog for logger

--- a/ojlogger/makefile
+++ b/ojlogger/makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-c -Wall 
-CDEFS= -DERRLOG -DWARNLOG -DINFOLOG -DDEBUGLOG -DLEVEL1LOG -DLEVEL2LOG -DLEVEL3LOG -DLEVEL4LOG -DLEVEL5LOG
+CDEFS= -DERRLOG -DWARNLOG -DINFOLOG -DDEBUGLOG -DTESTLOG -DLEVEL1LOG -DLEVEL2LOG -DLEVEL3LOG -DLEVEL4LOG -DLEVEL5LOG
 
 #all: actual
 
