--- a/ojllist/makefile
+++ b/ojllist/makefile
@@ -1,11 +1,13 @@
 CC=gcc
 CFLAGS=-c -Wall
 CDEFS= -DERRLOG -DWARNLOG -DINFOLOG
+DEPS = ../ojmemory/ojmemory.o
+
 
 test: ojllisttest
 
 ojllisttest: main.o 
-	$(CC) main.c -o ojlisttest $(CDEFS)
+	$(CC) main.c -o ojlisttest $(DEPS) $(CDEFS)
 
 main.o: main.c
 	$(CC) $(CFLAGS) main.c $(CDEFS)
