Added multi-threading to ojmemory

--- a/ojmemory/makefile
+++ b/ojmemory/makefile
@@ -1,6 +1,8 @@
 CC=gcc
 CFLAGS=-c -Wall
-CDEFS= -DERRLOG -DWARNLOG -DINFOLOG -DDEBUGLOG -DTESTLOG -DLEVEL1LOG -DLEVEL2LOG -DLEVEL3LOG -DLEVEL4LOG -DLEVEL5LOG
+CDEFS= -DOJ_POSIX_THREAD -DERRLOG -DWARNLOG -DINFOLOG -DDEBUGLOG -DTESTLOG -DLEVEL1LOG -DLEVEL2LOG -DLEVEL3LOG -DLEVEL4LOG -DLEVEL5LOG
+LIBS = pthread
+
 
 all: actual
 test: ojmemorytest
@@ -8,7 +10,7 @@ test: ojmemorytest
 actual: ojmemory.o
 
 ojmemorytest: main.o ojmemory.o
-	$(CC) main.c ojmemory.c -o ojmemorytest $(CDEFS)
+	$(CC) main.c ojmemory.c -o ojmemorytest $(CDEFS) -l$(LIBS)
 
 main.o: main.c
 	$(CC) $(CFLAGS) main.c $(CDEFS)
