dynamic array. Broke hash table

--- a/ojllist/makefile
+++ b/ojllist/makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-c -Wall
-CDEFS= -DERRLOG -DWARNLOG -DINFOLOG -DOJ_POSIX_THREAD
+CDEFS= -DERRLOG -DWARNLOG -DINFOLOG -DOJ_POSIX_THREAD -DDEBUGLOG
 DEPS = ../ojmemory/ojmemory.o
 LIBS = pthread
 
